# Trilobytes

./: .gitignore  CMakeLists.txt  Egg.cpp  Egg.h  Energy.h  EnergyPool.cpp  EnergyPool.h  Entity.cpp  Entity.h  EntityContainerInterface.h  EoBE.pro  FeedDispenser.cpp  FeedDispenser.h  FoodPellet.cpp  FoodPellet.h  GraphContainerWidget.cpp  GraphContainerWidget.h  How-to-create-Windows-release.txt  LineGraph.cpp  LineGraph.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeatChunk.cpp  MeatChunk.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkConnector.cpp  NeuralNetworkConnector.h  NeuralNetworkInspector.cpp  NeuralNetworkInspector.h  QuadTree.cpp  QuadTree.h  README.md  Random.h  ScatterGraph.cpp  ScatterGraph.h  Seed.cpp  Seed.h  Shape.h  (+16 more)
Effectors/: CMakeLists.txt  Effector.cpp  Effector.h  EffectorFilterMouth.cpp  EffectorFilterMouth.h  EffectorMouth.cpp  EffectorMouth.h  EffectorProboscisMouth.cpp  EffectorProboscisMouth.h  EffectorSpike.cpp  EffectorSpike.h  EffectorSpringTail.cpp  EffectorSpringTail.h  EffectorTail.cpp  EffectorTail.h
Genome/: CMakeLists.txt  ChromosomePair.cpp  ChromosomePair.h  Gene.cpp  Gene.h  GeneBrain.cpp  GeneBrain.h  GeneDigestiveEnzyme.cpp  GeneDigestiveEnzyme.h  GeneEffectorBase.cpp  GeneEffectorBase.h  GeneEffectorFilterMouth.cpp  GeneEffectorFilterMouth.h  GeneEffectorMouth.cpp  GeneEffectorMouth.h  GeneEffectorProboscisMouth.cpp  GeneEffectorProboscisMouth.h  GeneEffectorSpike.cpp  GeneEffectorSpike.h  GeneEffectorSpringTail.cpp  GeneEffectorSpringTail.h  GeneEffectorTail.cpp  GeneEffectorTail.h  GeneFactory.cpp  GeneFactory.h  GenePigment.cpp  GenePigment.h  GeneSenseBase.cpp  GeneSenseBase.h  GeneSenseEntitiesInArea.cpp  GeneSenseEntitiesInArea.h  GeneSenseEntitiesTouching.cpp  GeneSenseEntitiesTouching.h  GeneSenseEntityRaycast.cpp  GeneSenseEntityRaycast.h  GeneSenseLunarCycle.cpp  GeneSenseLunarCycle.h  GeneSenseMagneticField.cpp  GeneSenseMagneticField.h  GeneSenseRandom.cpp  (+16 more)
Main/: CMakeLists.txt  Egg.cpp  Egg.h  Entity.cpp  Entity.h  FeedDispenser.cpp  FoodPellet.cpp  FoodPellet.h  LineGraphContainerWidget.cpp  MainWindow.cpp  MeatChunk.cpp  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkConnector.h  NeuralNetworkInspector.cpp  QuadTree.cpp  ScatterGraph.cpp  Shape.h  Spike.h  Swimmer.cpp  Swimmer.h  Transform.h  Universe.cpp  Universe.h  UniverseWidget.cpp  Utils.h
SavedGenomes/: Backstroke.genome  CautiousSpikedManySenses.genome  CirclingSucker.genome  Default.genome  LazyLeaper.genome  LittleLooper.genome  LunarPoweredBig.genome  LunarPoweredSmall.genome  Patient.genome  PatientSpikeAvoider.genome  PricklyCustomer.genome  PricklyCustomer2.genome  SpeedyLooper.genome  SpikedSweeper.genome  SpikedSweeper2.genome  SweepingArm.genome  Unicorn.genome  UselessA.genome  UselessB.genome  WellGuarded.genome
Sensors/: CMakeLists.txt  Sense.cpp  Sense.h  SenseEntitiesInArea.cpp  SenseEntitiesInArea.h  SenseEntitiesTouching.cpp  SenseEntitiesTouching.h  SenseEntityDistance.cpp  SenseEntityDistance.h  SenseEntityPresence.cpp  SenseEntityPresence.h  SenseEntityRaycast.cpp  SenseEntityRaycast.h  SenseLunarCycle.cpp  SenseLunarCycle.h  SenseMagneticField.cpp  SenseMagneticField.h  SenseRandom.cpp  SenseRandom.h  SenseSine.cpp  SenseSine.h  SenseTraitsBase.cpp  SenseTraitsBase.h  SenseTraitsInArea.cpp  SenseTraitsInArea.h  SenseTraitsRaycast.cpp  SenseTraitsRaycast.h  SenseTraitsSelf.cpp  SenseTraitsSelf.h  SenseTraitsTouching.cpp  SenseTraitsTouching.h
Tests/: CMakeLists.txt  TestShape.cpp  TestShape.h  main.cpp
Utility/: AutoClearingContainer.h  CMakeLists.txt  FormatHelpers.h  JsonHelpers.cpp  JsonHelpers.h  MathConstants.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkConnector.cpp  Random.h  Range.h  RangeConverter.h
src/: CMakeLists.txt  Egg.h  Entity.cpp  Entity.h  EntityContainerInterface.h  FeedDispenser.cpp  FeedDispenser.h  FoodPellet.cpp  LineGraph.cpp  LineGraph.h  LineGraphContainerWidget.h  MainWindow.cpp  MainWindow.h  MeatChunk.cpp  MeatChunk.h  NeuralNetworkConnector.cpp  NeuralNetworkInspector.cpp  NeuralNetworkInspector.h  QuadTree.cpp  QuadTree.h  Random.h  ScatterGraph.cpp  ScatterGraph.h  Shape.h  Spike.cpp  Swimmer.cpp  Swimmer.h  Universe.cpp  Universe.h  UniverseWidget.h  main.cpp
src/Effectors/: Effector.cpp  Effector.h  EffectorFilterMouth.cpp  EffectorFilterMouth.h  EffectorProboscisMouth.h  EffectorSpike.cpp  EffectorSpike.h  EffectorSpringTail.h  EffectorTail.h
src/Genome/: ChromosomePair.cpp  ChromosomePair.h  Gene.cpp  Gene.h  GeneBrain.cpp  GeneBrain.h  GeneEffectorBase.h  GeneEffectorFilterMouth.cpp  GeneEffectorFilterMouth.h  GeneEffectorProboscisMouth.h  GeneEffectorSpike.h  GeneEffectorSpringTail.cpp  GeneEffectorSpringTail.h  GeneEffectorTail.h  GeneFactory.cpp  GeneFactory.h  GenePigment.cpp  GenePigment.h  GeneSenseBase.h  GeneSenseLunarCycle.h  GeneSenseMagneticField.h  GeneSenseRandom.cpp  GeneSenseRandom.h  GeneSenseSine.cpp  GeneSenseSine.h  GeneSenseTraitsBase.cpp  GeneSenseTraitsBase.h  GeneSenseTraitsInArea.cpp  GeneSenseTraitsInArea.h  GeneSenseTraitsRaycast.cpp  GeneSenseTraitsRaycast.h  GeneSenseTraitsSelf.cpp  GeneSenseTraitsSelf.h  GeneSenseTraitsTouching.cpp  GeneSenseTraitsTouching.h  Genome.cpp  Phenotype.h
src/Sensors/: Sense.cpp  Sense.h  SenseMagneticField.cpp  SenseMagneticField.h  SenseRandom.cpp  SenseRandom.h  SenseSine.cpp  SenseSine.h  SenseTraitsBase.cpp  SenseTraitsBase.h  SenseTraitsInArea.cpp  SenseTraitsInArea.h  SenseTraitsRaycast.cpp  SenseTraitsRaycast.h  SenseTraitsSelf.cpp  SenseTraitsSelf.h  SenseTraitsTouching.h
src/Utility/: Algorithm.h  CircularBuffer.h  LineGraph.cpp  LineGraph.h  NeuralNetworkConnector.h  QuadTree.h  Random.h  Range.h  RangeConverter.cpp  RangeConverter.h  RollingStatistics.cpp  RollingStatistics.h  ScatterGraph.h  Shape.h  Transform.h
test/: CMakeLists.txt  TestRangeConverter.cpp  TestShape.cpp
